# plutus-nix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NIX SETUP.md  README.md  Tutorials.md  flake.nix
code/: cabal.project  cabal.project.local
code/Utilities/: Utilities.cabal
code/Utilities/src/Utilities/: Conversions.hs  PlutusTx.hs  Serialise.hs
code/wspace/: campaign-validator.plutus  circle.cbor  circle.plutus  stable_swap.plutus  wspace.cabal
code/wspace/assets/: allowance.plutus  allowance2.plutus  auction2.plutus  auction3.plutus  auction4.plutus  auction5.plutus  auction6.plutus  donation.plutus  escrow-nft.plutus  nft-61613732666332393437643036666533313634646233656537316566366664633163363431393338373264303836646135353135303037613237303436613537#0-4d6f72616e.plutus  payroll.plutus  payroll1.plutus  public_fund_final.plutus  public_fund_test.plutus  time-locked-savings.plutus  time-locked-savings2.plutus
code/wspace/compiled/: stream-validator.plutus
code/wspace/lecture/: CGPlutusUtilsv1.hs  CGTime.hs  Demo.hs  Mint.hs  NFT.hs  OnchainProgress.md  ParameterizedVesting.hs  StakingRewards.md  Tutorial-CGPlutusUtilsSpec.md  Tutorial-CGPlutusUtilsv1.md  Tutorial-CGTime.md  Tutorial-CGTimeSpec.md  Tutorial-ParameterizedVesting.md  Tutorial-ParamterizedVestingSpec.md  Tutorial-Vesting.md  Tutorial-VestingSpec.md  Tutorials.md  Vesting.hs
code/wspace/lecture/archive/: temp.hs
code/wspace/tests/: Allowance.hs  Auction.hs  Auction2.hs  Auction3.hs  CGPlutusUtilsSpec.hs  CGTimeSpec.hs  Campaign.hs  Campaign.html  CoveredCallVault.hs  CoveredCallVault.html  DemoSpec.hs  Electronics.hs  Electronics.html  Emulator.hs  Escrow.hs  Esusu.hs  Fund.hs  Health.hs  Health.html  Main.hs  Main1.hs  MintSpec.hs  MultiHopRouter.hs  MultiHopRouter.html  NFTSpec.hs  OnchainProgress.hs  OnchainProgress.html  OptionsAMM.hs  ParameterizedVestingSpec.hs  Payroll.hs  PublicFund.hs  SafeSwap.hs  SafeSwap.html  Savings.hs  Savings2.hs  SimpleLocking.hs  Spec.hs  StableSwap.hs  StableSwap.html  StakingRewards.hs  (+10 more)
