cabal-version:      3.4
name:               wspace
version:            0.1.0.0
author:             IOG's education team, Bernard Sibanda
maintainer:         education@iohk.io, cto@wims.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:
        base ^>=4.14.3.0,
        aeson,
        bytestring,
        containers,
        cardano-api,
        data-default,
        plutus-ledger-api,
        cardano-ledger-core,
        plutus-tx-plugin,
        plutus-tx,
        base16-bytestring,
        text,
        serialise,
        utilities,
        cardano-ledger-shelley,
        bech32 >=1.1 && <2.0,
        time
    default-language: Haskell2010
    ghc-options:
        -Wall
        -fobject-code
        -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas
        -fno-strictness
        -fno-spec-constr
        -fno-specialise
        -fexpose-all-unfoldings
        -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:
      QuickCheck,
      tasty,
      tasty-hunit,
      bytestring,
      base16-bytestring,
      plutus-simple-model,
      plutus-ledger-api,
      directory
    default-language: Haskell2010

library
    import:             common-all
    hs-source-dirs:     lecture
    exposed-modules:
        ParameterizedVesting,
        CGPlutusUtilsv1,
        CGTime,
        Vesting,
        Demo,
        Mint,
        NFT   
executable vesting-exe
    main-is:            Main.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time
    default-language:   Haskell2010
    other-modules:      Types

executable campaign-exe
    main-is:            Campaign.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time
    default-language:   Haskell2010
    other-modules:      Types

executable TWAMM-exe
    main-is:            TWAMM.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time
    default-language:   Haskell2010
    other-modules:      Types

executable streamvault-exe
    main-is:            StreamVault.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
    default-language:   Haskell2010
    other-modules:      Types

executable StakingRewards-exe
    main-is:            StakingRewards.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable StableSwap-exe
    main-is:            StableSwap.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable Savings-exe
    main-is:            Savings.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
    
executable Savings2-exe
    main-is:            Savings2.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable Allowance-exe
    main-is:            Allowance.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable nft-exe
    main-is:            NFT.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable nftspec-exe
    main-is:            NFTSpec.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable payroll-exe
    main-is:            Payroll.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types

executable escrow-exe
    main-is:            Escrow.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable auction-exe
    main-is:            Auction.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable auction2-exe
    main-is:            Auction2.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable auction3-exe
    main-is:            Auction3.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable esusu-exe
    main-is:            Esusu.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable simple-locking-exe
    main-is:            SimpleLocking.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty
    default-language:   Haskell2010
    other-modules:      Types
executable public-fund-exe
    main-is:            PublicFund.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty,
        tasty,
        tasty-hunit,
        tasty-expected-failure
    default-language:   Haskell2010
    other-modules:      Types
executable public-fund-spec-exe
    main-is:            PublicFundSpec.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        wspace,
        plutus-tx,
        plutus-tx-plugin,
        plutus-ledger-api,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley,
        serialise,
        bytestring,
        text,
        aeson,
        containers,
        data-default,
        bech32,
        utilities,
        time,
        base16,
        base16-bytestring,
        directory,
        aeson-pretty,
        tasty,
        tasty-hunit,
        tasty-expected-failure
    default-language:   Haskell2010
    other-modules:      Types

test-suite wspace-tests
    import:              common-all-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    main-is:             Spec.hs
    build-depends:
      wspace,
      utilities
    other-modules:
      CGPlutusUtilsSpec
      CGTimeSpec
      ParameterizedVestingSpec
      VestingSpec
      DemoSpec
      MintSpec
    default-language:    Haskell2010

